# goita-rust

./: Cargo.toml
.github/workflows/: ci.yml
goita/: Cargo.toml  README.md  README_ja.md
goita/src/: game.rs  lib.rs  round.rs  types.rs
goita/tests/: hand_role_detection_tests.rs  normal_game_flow.rs
goita/tests/common/: mod.rs
goita_cli/: Cargo.toml
goita_cli/src/: main.rs
goita_core/: Cargo.toml  README.md  README_ja.md
goita_core/src/: board.rs  hand.rs  lib.rs  piece.rs
goita_core/tests/: integration_test.rs
goita_simulator/: Cargo.toml
goita_simulator/src/: lib.rs
