[workspace]
default-members = ["goita"]
members = ["goita_cli", "goita_core", "goita"]
resolver = "3"

[workspace.package]
authors = ["surumeika1987"]
edition = "2024"
rust-version = "1.88.0"
repository = "https://github.com/surumeika1987/goita-rust"
keywords = ["goita", "game", "board game"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
goita_core = { path = "goita_core", version = "0.1.0" }
goita = { path = "goita", version = "0.1.0" }
