[package]
name = "goita"
version = "0.2.3"
description = "Core game engine for Goita, including round/game state management, turn validation, scoring rules, ans special hand event handling."
readme = "./README.md"

authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]

[dependencies]
rand = "0.10"
goita_core.workspace = true
